--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 #pip stuff
 MANIFEST
 
+
 # C extensions
 *.so
 
@@ -13,6 +14,9 @@ MANIFEST
 .Python
 env/
 build/
+.templates/
+*.rst
+.build/
 develop-eggs/
 dist/
 downloads/
